Erbrechner: Dropdown scrollbar fix

--- a/erbrechner/erbrechner.css
+++ b/erbrechner/erbrechner.css
@@ -23,6 +23,10 @@
     overflow-y: auto;
 }
 
+.dropdown-item {
+    margin-right: 10px;
+}
+
 /* Remove arrow buttons in number input */
 
 /* Chrome, Safari, Edge, Opera */
